# lwiot-core

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  README.md  build.yaml
scripts/: CMakeLists.txt  build.py  ci-runner.py  cmake-header-list-gen.py  config.h.in  file-header.py  spiffsgen.py  utest.py
scripts/bot/: byteordertool.c  getopt.c  getopt.h
scripts/sslecho/: cert.pem  client.py  key.pem  server.py
scripts/tcpecho/: client.c  server.c
scripts/udpecho/: client.py  server.py
source/: CMakeLists.txt  application.cpp  bufferedstream.cpp  bytebuffer.cpp  datetime.cpp  init.c  log.c  log.cpp  scopedlock.cpp  stream.cpp  string.cpp  test.cpp  vector.cpp
source/drivers/: drivers.cmake
source/drivers/clock/: dsrealtimeclock.cpp  realtimeclock.cpp
source/drivers/eeprom/: eeprom24c02.cpp
source/drivers/sram/: sram23k256.cpp
source/io/: io.cmake
source/io/adc/: adcchip.cpp  adcpin.cpp  avradcchip.cpp  dacchip.cpp  dacpin.cpp  esp32adcchip.cpp  esp32dacchip.cpp  esp32primaryadc.cpp  esp32secondaryadc.cpp  esp8266adcchip.cpp
source/io/clock/: dsrealtimeclock.cpp  realtimeclock.cpp
source/io/fs/: file.cpp
source/io/gpio/: avr.c  avrgpiochip.cpp  esp32gpiochip.cpp  esp8266gpiochip.cpp  gpiochip.cpp  gpiopin.cpp  hostedgpiochip.cpp
source/io/i2c/: avri2c.h  esp32i2calgorithm.cpp  esp8266i2calgorithm.cpp  gpioi2calgorithm.cpp  hardwarei2calgorithm.cpp  i2calgorithm.cpp  i2cbus.cpp  i2cmessage.cpp  softwarei2calgorithm.cpp
source/io/onewire/: dhtbus.cpp  onewirebus.cpp
source/io/pwm/: leddriver.cpp  pwmchannel.cpp  pwmtimer.cpp  rgbleddriver.cpp
source/io/spi/: esp32spibus.cpp  spibus.cpp  spimessage.cpp
source/io/uart/: avruart.cpp  esp32uart.cpp  esp8266-softuart.c  esp8266uart.cpp  uart.cpp
source/io/wdt/: avrwatchdog.cpp  esp32watchdog.cpp  esp8266watchdog.cpp  watchdog.cpp
source/io/wifi/: esp32_ap.cpp  esp32_station.cpp  esp32_wifi.c  esp8266_ap.cpp  esp8266_station.cpp
source/kernel/: asyncfsm.cpp  event.cpp  fsm.cpp  functionalthread.cpp  lock.cpp  thread.cpp  timer.cpp  timereventqueue.cpp
source/lib/: count.cpp  guid.cpp  lib.cmake  measurementvector.cpp  placeholders.cpp  sharedpointercount.cpp
source/lib/gfx/: gfxbase.cpp  ssd1306display.cpp
source/lib/json/: comments.cpp  encoding.cpp  indentedprint.cpp  jsonarray.cpp  jsonbuffer.cpp  jsonobject.cpp  jsonparser.cpp  jsonvariant.cpp  list.cpp  prettyfier.cpp  printer.cpp  staticstringbuilder.cpp
source/lib/net/: ipaddress.cpp
source/lib/streams/: bufferedstream.cpp  printer.cpp  stream.cpp
source/lib/time/: asc_store.c  asctime.c  asctime_r.c  ctime.c  ctime_r.c  daylight_seconds.c  difftime.c  dst_pointer.c  ephemera_common.h  equation_of_time.c  fatfs_time.c  geo_location.c  gm_sidereal.c  gmtime.c  gmtime_r.c  is_leap.c  iso_week_date.c  iso_week_date_r.c  isotime.c  isotime_r.c  lm_sidereal.c  localtime.c  localtime_r.c  mk_gmtime.c  mktime.c  month_length.c  moon_phase.c  print_lz.c  set_dst.c  set_position.c  set_system_time.c  set_zone.c  solar_declination.c  solar_noon.c  strftime.c  sun_rise.c  sun_set.c  system_time.c  time.c  time.h  (+4 more)
source/net/: dns.c  dns.h  net.cmake  tcpclient.cpp  tcpserver.cpp
source/net/802.11/: wifiaccesspoint.cpp  wifistation.cpp
source/net/802.15.4/: asyncxbee.cpp  xbee.cpp  xbeerequest.cpp  xbeeresponse.cpp
source/net/http/: httpserver.cpp  mimetable.cpp  mimetable.h  requesthandlerimpl.h
source/net/iot/: asyncmqttclient.cpp  mqtt.h  mqttclient.cpp
source/net/mqtt/: mqtttoken.cpp  mqtttoken.h  mqtttokenbucket.cpp  mqtttokenbucket.h
source/net/sockets/: lwip.c  unix.c  unix_sockets.h  win32.c
source/net/tcp/: securetcpclient.cpp  sockettcpclient.cpp  sockettcpserver.cpp  tcpclient.cpp  tcpserver.cpp
source/net/udp/: dnsclient.cpp  dnsserver.cpp  socketudpclient.cpp  socketudpserver.cpp  udpclient.cpp  udpserver.cpp
source/net/util/: base64.c  captiveportal.cpp  dns.c  ipaddress.cpp  ntpclient.cpp
source/platform/: CMakeLists.txt
source/platform/avr/: CMakeLists.txt  avr-i2c.c  avri2calgorithm.cpp  avrspi.c  avrspibus.cpp  avruart.cpp  avrwatchdog.cpp
source/platform/esp32/: CMakeLists.txt  esp32_ap.cpp  esp32_station.cpp  esp32_wifi.c  esp32adcchip.cpp  esp32dacchip.cpp  esp32gpio.h  esp32gpiochip.cpp  esp32i2calgorithm.cpp  esp32primaryadc.cpp  esp32pwmchannel.cpp  esp32pwmtimer.cpp  esp32secondaryadc.cpp  esp32spi.c  esp32spibus.cpp  esp32uart.cpp  esp32watchdog.cpp  netdb.c
source/platform/esp8266/: CMakeLists.txt  esp8266-softuart.c  esp8266-softuart.h  esp8266_ap.cpp  esp8266_station.cpp  esp8266adcchip.cpp  esp8266gpiochip.cpp  esp8266uart.cpp  esp8266watchdog.cpp
source/platform/hosted/: hardwarei2calgorithm.cpp  hostedgpiochip.cpp  hostedwatchdog.cpp  i2c.h  i2cdbg.c  i2chal.c  timer.c
source/ports/: event.cpp  functionalthread.cpp  lock.cpp  thread.cpp  timer.c  timer.cpp
source/sensors/: apds9301sensor.cpp  bmp085sensor.cpp  bmp280sensor.cpp  bmpsensor.cpp  ccs811sensor.cpp  dhtsensor.cpp  eeprom24c02.cpp  mcp9808sensor.cpp  sensors.cmake  sgp30sensor.cpp  sht31sensor.cpp
source/soc/: avr.c  avrsystem.cpp  cplusplus.cpp  esp32.c  esp32system.cpp  esp8266.c  esp8266.cpp  esp8266system.cpp  unix.c  win32.c  win32.cpp
source/util/: bytebuffer.cpp  datetime.cpp  log.c  log.cpp  randstring.cpp  scopedlock.cpp  string.cpp  system.cpp  vector.cpp
tests/generic/: CMakeLists.txt  bufferedstream_test.cpp  bytebuffer_test.cpp  dac_test.cpp  datetime_test.cpp  fileio_test.cpp  function_test.cpp  guid_test.cpp  hashmap_test.cpp  hostedgpio_test.cpp  i2cmessage_test.cpp  ipaddress_test.cpp  json_test.cpp  leddriver_test.cpp  linkedlist_test.cpp  log_test.cpp  map_test.cpp  matplotlib_test.cpp  ringbuffer_test.cpp  sharedpointer_test.cpp  skiplist_test.cpp  spi_test.cpp  string_test.cpp  tuple_test.cpp  typetraits_test.cpp  vector_test.cpp
tests/network/: CMakeLists.txt  captiveportal_test.cpp  dns-server_test.cpp  http-server_test.cpp  mqtt-token_test.cpp  mqttclient_test.cpp  sslclient_test.cpp  tcp-client_test.cpp  tcp-server_test.cpp  udp-client_test.cpp  udp-server_test.cpp
(+459 files in other folders)
